// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BitcoinPrice should accept style object 1`] = `
<PriceFormat
  amount={4200}
  currency="EUR"
  style={
    {
      "marginTop": 16,
    }
  }
/>
`;

exports[`BitcoinPrice should render correctly 1`] = `
<PriceFormat
  amount={4200}
  currency="EUR"
/>
`;
